[fix] scrollbars and remove searchbar

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -11,66 +11,41 @@ body{
 
 main, .main-wrapper, aside{
     overflow: auto;
-    height: calc(100vh - 103px)
+    height: calc(100vh - 90px);
 }
 
 main{
     background-color: #eff1f7;
 }
 
-
 // header
 
-.navbar{
+header{
+    height: 90px;
     background-color: #1583b4;
 
-    .logo_doc{
-        width: 14vw;
+    .navbar{
 
-        img{
-            max-width: 100%;
-        }
-    }
+        .logo_doc{
+            width: 14vw;
+            min-width: 100px;
 
-    .nav-link{
-        color: white;
-
-    }
-
-    // searchbar
-
-    .search-form {
-        display: flex;
-        align-items: center;
-
-        input, .search-btn{
-            background-color: #f4f7fc;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-            padding: 10px 20px;
-            font-size: 16px;
-            border: none;
+            img{
+                max-width: 100%;
+            }
         }
 
-        input {
-            width: 20vw;
-            border-radius: 0px 30px 30px 0px;
-            flex: 1;
+        .nav-link{
+            color: white;
+
         }
 
-        .search-btn {
-            color: gray;
-            border-radius: 30px 0px 0px 30px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-            font-size: 16px;
-            cursor: pointer;
-        }
     }
 }
 
 // aside
 
 aside{
-    width: 15vw;
     background-color: #1583b4;
 
     ul{
@@ -100,6 +75,35 @@ aside{
 ::-webkit-scrollbar, body::-webkit-scrollbar {
     width: 7px;
     background-color: #bdbdbd;
+}
+
+// searchbar
+
+.search-form {
+    display: flex;
+    align-items: center;
+
+    input, .search-btn{
+        background-color: #f4f7fc;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+        padding: 10px 20px;
+        font-size: 16px;
+        border: none;
+    }
+
+    input {
+        width: 20vw;
+        border-radius: 0px 30px 30px 0px;
+        flex: 1;
+    }
+
+    .search-btn {
+        color: gray;
+        border-radius: 30px 0px 0px 30px;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+        font-size: 16px;
+        cursor: pointer;
+    }
 }
 
 
